--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="contact-section">
         <div class="button-wrapper">
           <a href="mailto:info@ikigaideveloper.com" class="contact"
-            >Iletişim için:</a
+            >Iletişim için</a
           >
         </div>
       </div>
