some features added

--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="tr">
   <head>
+    <!-- Character Set Declaration: This specifies the character encoding for the HTML document, which is UTF-8. UTF-8 includes most characters from all known languages, making it universal. -->
     <meta charset="UTF-8" />
+
+    <!-- Viewport Settings: This makes your website responsive by setting the viewport width to the device width and initial scale to 1.0. This means the page will render at the width of the device's screen size. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Document Title: Specifies the title of the document shown in browser's title bar or tab. -->
     <title>Ikigai Developer</title>
+
+    <!-- Apple Touch Icon: Links to an Apple touch icon, a custom icon for use on Apple devices when the user adds the page to their home screen. -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-32x32.png">
+
+    <!-- Favicon for Standard Browsers: Defines icons for various sizes for different devices and browser tabs. -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+
+    <!-- Web Manifest: Links to a JSON file that specifies metadata about the web application such as name, author, icon(s), and description. Useful for progressive web apps. -->
     <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Google Fonts Preconnect: Optimizes font loading by resolving the domain name where the fonts are hosted ahead of time. -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-      rel="stylesheet"
-    />
+
+    <!-- Google Fonts API: Links to Google's font API, importing the 'Roboto Mono' font family in various styles and weights. -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
+
+    <!-- Additional Google Fonts Preconnect: Repeats the preconnect process for Google Fonts for redundancy and reliability. -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- More Google Fonts API: Imports additional font families ('Cutive Mono' and 'Poppins') from Google Fonts in various styles and weights. -->
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- External CSS: Links to an external CSS file that contains the styles for the webpage. -->
     <link rel="stylesheet" href="css/ikigai.css" />
-  </head>
+</head>
   <body>
-    <canvas id="matrixCanvas"></canvas>
     <div class="flex-container">
       <div class="text-container">
-        <h2>Coming Soon! 👨‍💻</h2>
+        <img src="images/Logo2.png"  alt="">
+        <h2>Coming Soon!</h2>
         <p class="community-message">
-          Ikigai Developer Topluluğu Projelerinin Paylaşa bileceği ve onlar
-          üzerinde tartışa bileceği Web sitesidir
+          Ikigai Developer Topluluğu, kullanıcıların çeşitli konulardaki bilgilerini paylaşabilecekleri ve geliştirebilecekleri bir platformdur.
         </p>
       </div>
       <div class="contact-section">
         <div class="button-wrapper">
           <a href="mailto:info@ikigaideveloper.com" class="contact"
-            >Iletişim için</a
+            >İletişim için</a
           >
         </div>
       </div>
