--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <title>Ikigai Developer</title>
 
     <!-- Apple Touch Icon: Links to an Apple touch icon, a custom icon for use on Apple devices when the user adds the page to their home screen. -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180"
+      href="favicon/apple-touch-icon.png">
 
     <!-- Favicon for Standard Browsers: Defines icons for various sizes for different devices and browser tabs. -->
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+      href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16"
+      href="favicon/favicon-16x16.png">
 
     <!-- Web Manifest: Links to a JSON file that specifies metadata about the web application such as name, author, icon(s), and description. Useful for progressive web apps. -->
     <link rel="manifest" href="/site.webmanifest">
@@ -25,34 +28,40 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Google Fonts API: Links to Google's font API, importing the 'Roboto Mono' font family in various styles and weights. -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet" />
 
     <!-- Additional Google Fonts Preconnect: Repeats the preconnect process for Google Fonts for redundancy and reliability. -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- More Google Fonts API: Imports additional font families ('Cutive Mono' and 'Poppins') from Google Fonts in various styles and weights. -->
-    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet">
 
     <!-- External CSS: Links to an external CSS file that contains the styles for the webpage. -->
     <link rel="stylesheet" href="css/ikigai.css" />
-</head>
+  </head>
   <body>
     <div class="flex-container">
       <div class="text-container">
-        <img src="images/Logo2.png"  alt="">
+        <img src="images/ikigaiLogo.webp" alt="ikigai logo">
         <h2>Coming Soon!</h2>
         <p class="community-message">
-          Ikigai Developer Topluluğu, kullanıcıların çeşitli konulardaki bilgilerini paylaşabilecekleri ve geliştirebilecekleri bir platformdur.
+          Ikigai Developer Topluluğu, kullanıcıların çeşitli konulardaki
+          bilgilerini paylaşabilecekleri ve geliştirebilecekleri bir
+          platformdur.
         </p>
       </div>
       <div class="contact-section">
         <div class="button-wrapper">
-          <a href="mailto:info@ikigaideveloper.com" class="contact"
-            >İletişim için</a
-          >
+          <a href="mailto:info.global@ikigaideveloper.com"
+            class="contact">İletişim
+            için</a>
         </div>
       </div>
-    <script src="script/ikigai.js"></script>
-  </body>
-</html>
+      <script src="script/ikigai.js"></script>
+    </body>
+  </html>
